--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -8,11 +8,15 @@
 </head>
 <body>
     <div class="container">
-
         <h1>My To-Do List</h1>
         
-        <input type="text" id="taskInput" placeholder="Add a new task here..!">
-        <button id="addTaskBtn">Add Task</button>
+        <div class="input-group">
+            <input 
+                type="text" 
+                id="taskInput" 
+                placeholder="Add a new task here..!">
+            <button id="addTaskBtn">Add Task</button>
+        </div>
         
         <table id="taskTable">
             <thead>
@@ -29,6 +33,6 @@
         </table>
     </div>
 
-    <script src="templates/base.html"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
