--- a/static/css/style_login.css
+++ b/static/css/style_login.css
@@ -204,3 +204,27 @@
   .container.active .toogle-right {
     transform: translateX(200%);
   }
+
+  .flash-messages {
+    margin: 20px;
+    padding: 10px;
+  }
+
+  .flash-message {
+      padding: 10px;
+      margin-bottom: 10px;
+      border: 1px solid transparent;
+      border-radius: 5px;
+  }
+
+  .flash-message.success {
+      background-color: #d4edda;
+      color: #155724;
+      border-color: #c3e6cb;
+  }
+
+  .flash-message.error {
+      background-color: #f8d7da;
+      color: #721c24;
+      border-color: #f5c6cb;
+  }
