--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>To-Do List App</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
 </head>
 <body>
     <div class="container">
-        <h1>My To-Do List</h1>
+        <h1><i>My To-Do Task List</i></h1>
         
         <div class="input-group">
             <input 
@@ -17,22 +17,24 @@
                 placeholder="Add a new task here..!">
             <button id="addTaskBtn">Add Task</button>
         </div>
-        
-        <table id="taskTable">
-            <thead>
-                <tr>
-                    <th id="task-th">Task</th>
-                    <th>Status</th>
-                    <th>Edit</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Tasks will be inserted here dynamically -->
-            </tbody>
-        </table>
+        <br><hr>
+        <br><hr>
+        <div class="container">
+            <table id="taskTable">
+                <thead>
+                    <tr>
+                        <th id="task-th">Task</th>
+                        <th>Status</th>
+                        <th>Edit</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Tasks will be inserted here dynamically -->
+                </tbody>
+            </table>
+        </div>
     </div>
-
     <script src="{{ url_for('static', filename='scripts/script.js') }}"></script>
 </body>
 </html>
