update title in index.html to reflect application purpose

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
     <!-- Custom Styles -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style_login.css') }}"/>
     
-    <title>Login Page</title>
+    <title>Events Organizer</title>
 </head>
 <body>
     <div class="container" id="container">
