refine HTML comments and update text for clarity on index page

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -29,6 +29,7 @@
             </thead>
             <tbody>
                 <!-- Tasks will be inserted here dynamically -->
+                <!-- Not Working now. Debug later? -->
             </tbody>
         </table>
     </div>
