--- a/templates/index.html
+++ b/templates/index.html
@@ -92,7 +92,7 @@
             <div class="toogle">
                 <div class="toogle-panel toogle-left">
                     <h1>Welcome User!</h1>
-                    <p>If you already have an account</p>
+                    <p>If already you have an account</p>
                     <button class="hidden" id="login">Sign In</button>
                 </div>
                 <div class="toogle-panel toogle-right">
