--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -49,6 +49,6 @@
         </table>
     </div>
 
-    <script src="{{ url_for('static', filename='scripts/script.js') }}"></script>
+    <!--<script src="{{ url_for('static', filename='scripts/script.js') }}"></script>-->
 </body>
 </html>
