--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -37,9 +37,9 @@
                 <tr>
                     <td>{{ task.name }}</td>
                     <td>{{ task.status }}</td>
-                    <td><button>Edit</button></td>
+                    <td><button type="submit" class="btn btn btn-outline-success">Edit</button></td>
                     <td>
-                        <form action="{{ url_for('delete_task', task_id=task.id) }}" method="POST">
+                        <form onsubmit="deleteTask(event, {{ task.id }})">
                             <button type="submit">Delete</button>
                         </form>
                     </td>
@@ -49,6 +49,19 @@
         </table>
     </div>
 
-    <!--<script src="{{ url_for('static', filename='scripts/script.js') }}"></script>-->
+    <script>
+        function deleteTask(event, taskId) {
+            event.preventDefault();
+            fetch(`/api/tasks/${taskId}`, {
+                method: 'DELETE',
+            }).then(response => {
+                if (response.ok) {
+                    window.location.reload();
+                } else {
+                    alert('Failed to delete task');
+                }
+            });
+        }
+    </script>
 </body>
 </html>
